# ert-contrib-middleware

./: .gitattributes  .gitignore  README.md
contrib/APPLICATIONS/RTSP-streamer/: README  generic-RTSP-server-x86  generic-RTSP-server.c  (+7 more)
contrib/libXrender/libXrender-0.9.0/: AddTrap.c  COPYING  ChangeLog  Color.c  Composite.c  Cursor.c  FillRect.c  Filter.c  Makefile.am  Picture.c  Trap.c  Tri.c  Xrender.c  Xrender.h  Xrenderint.h  configure.ac  libtool
contrib/lua/: README.txt
inx_build_scripts/: README.WIN32  buid-dbus.sh  build-arm-64-linux-android-9-ehs.sh  build-arm-linux-android-9-ehs.sh  build-arm-linux-gnu-glibc-2.12.2-ehs-gtk-gst-OMAP4_TI.sh  build-arm-linux-gnu-glibc-2.12.2-ehs-gtk-gst.sh  build-arm-linux-gnu-glibc-2.12.2-ehs-gtk-vlc.sh  build-arm-linux-gnu-glibc-2.12.2-mesa-test.sh  build-arm64-gtk-gst-greengrass_debian10.sh  build-arm64-gtk-gst-greengrass_debian11.sh  build-armv7a-linux-android-ehs.sh  build-armv7a-linux-android-sdk-28-ehs.sh  build-esp32-freertos-ehs.sh  build-esp32s3-freertos-ehs-idf-5-1-x.sh  build-esp32s3-freertos-ehs.sh  build-esp32s3-n8r2-freertos-ehs-idf-5-1-x.sh  build-i486-linux-gnu-gcc-4.2.4-ehs-gtk-gst.sh  build-i686-linux-gnu-glibc-2.12.2-ehs-base.sh  build-i686-linux-gnu-glibc-2.12.2-ehs-gtk-gst.sh  build-i686-linux-gnu-glibc-2.12.2-ehs-gtk-vlc.sh  build-x86_64-to-armv7l-linux-clang-rpi-ubuntu18.sh  build-x86_64-to-x86_64-linux-clang.sh  build_all.sh  create-atom-platform-patch.sh  ubuntu-build-tools-deps.sh
inx_build_scripts/depricated/: clean_target.sh
inx_build_scripts/inx_build_scripts/: build-arm-linux-gtk-gst_raspberry.sh  build-armv7a-linux-android-sdk-28-ehs.sh  build-i486-linux-gnu-gcc-4.2.4-ehs-gtk-gst-webkit.sh  build-i486-linux-gnu-gcc-4.2.4-ehs-gtk-vlc.sh  build-x86_64-to-armv7l-linux-clang.sh  build-x86_64-to-x86_64-linux-clang.sh  create-tarballs-for-atom-platform.sh
inx_build_scripts/source-scripts/: inx-install-target-libs.sh  inx-xbuilder-source-me-espidf-s3.sh  inx-xbuilder-source-me-espidf.sh  inx-xbuilder-source-me-qt.sh  inx-xbuilder-source-me.sh  python-pip-requirements_inx-xbuilder-source-me-espidf.txt
target_libs/: armv7l-linux-gnu-clang10ubuntu18_aws-iot  i686-pc-linux-gnu-4.4.6_gtk_gst-no-gstlibs
target_libs/i686-pc-linux-gnu-4.4.6_gtk_gst/: i686-pc-linux-gnu-4.4.6_gtk_gst
target_libs/i686-pc-linux-gnu-4.4.6_i686-pc-linux-gnu-4.4.6_base/: i686-pc-linux-gnu-4.4.6
(+4513 files in other folders)
